# network-manager-openswan

./: .gitignore  Makefile.am  configure.ac  nm-libreswan-service.name.in  nm-libreswan.desktop.in  nm-openswan-service.name.in
auth-dialog/: Makefile.am  main.c  nm-swan-auth-dialog.desktop.in.in
po/: POTFILES.in  POTFILES.skip
properties/: Makefile.am  nm-openswan.c
src/: Makefile.am  nm-openswan-service-helper.c  nm-openswan-service.c  nm-openswan-service.h
